--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -14,6 +14,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company ID</th>\n",
+       "      <th>Creative</th>\n",
+       "      <th>Email Sent Date</th>\n",
+       "      <th>application_start_date</th>\n",
+       "      <th>started_application</th>\n",
+       "      <th>finished_application</th>\n",
+       "      <th>Loan Offer</th>\n",
+       "      <th>Loan Accepted</th>\n",
+       "      <th>Loan Amount</th>\n",
+       "      <th>Amount Requested</th>\n",
+       "      <th>application_month</th>\n",
+       "      <th>stared_application</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>446140</td>\n",
+       "      <td>Default Creative</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>354516</td>\n",
+       "      <td>Default Creative</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>128643</td>\n",
+       "      <td>Default Creative</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>232285</td>\n",
+       "      <td>Default Creative</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>239789</td>\n",
+       "      <td>Default Creative</td>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Company ID          Creative Email Sent Date application_start_date  \\\n",
+       "0      446140  Default Creative      2018-02-01                    NaT   \n",
+       "1      354516  Default Creative      2018-02-01                    NaT   \n",
+       "2      128643  Default Creative      2018-02-01                    NaT   \n",
+       "3      232285  Default Creative      2018-02-01                    NaT   \n",
+       "4      239789  Default Creative      2018-02-01                    NaT   \n",
+       "\n",
+       "   started_application  finished_application  Loan Offer  Loan Accepted  \\\n",
+       "0                  0.0                   NaN         NaN            NaN   \n",
+       "1                  0.0                   NaN         NaN            NaN   \n",
+       "2                  0.0                   NaN         NaN            NaN   \n",
+       "3                  0.0                   NaN         NaN            NaN   \n",
+       "4                  0.0                   NaN         NaN            NaN   \n",
+       "\n",
+       "   Loan Amount  Amount Requested application_month stared_application  \n",
+       "0          NaN               NaN               NaT               None  \n",
+       "1          NaN               NaN               NaT               None  \n",
+       "2          NaN               NaN               NaT               None  \n",
+       "3          NaN               NaN               NaT               None  \n",
+       "4          NaN               NaN               NaT               None  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "campaign_applications.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -340,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +557,7 @@
        "                     1.0                          75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +578,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>started_application</th>\n",
+       "      <th>finished_application</th>\n",
+       "      <th>Loan Offer</th>\n",
+       "      <th>Loan Accepted</th>\n",
+       "      <th>Loan Amount</th>\n",
+       "      <th>loan_average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Creative</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alternative Creative</th>\n",
+       "      <td>34.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1525915.0</td>\n",
+       "      <td>108993.928571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Default Creative</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>2473201.0</td>\n",
+       "      <td>65084.236842</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      started_application  finished_application  Loan Offer  \\\n",
+       "Creative                                                                      \n",
+       "Alternative Creative                 34.0                  20.0        14.0   \n",
+       "Default Creative                     75.0                  50.0        38.0   \n",
+       "\n",
+       "                      Loan Accepted  Loan Amount   loan_average  \n",
+       "Creative                                                         \n",
+       "Alternative Creative           12.0    1525915.0  108993.928571  \n",
+       "Default Creative               28.0    2473201.0   65084.236842  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = campaign_applications.groupby(['Creative']).agg({'started_application':'sum',\n",
+    "                                                                  'finished_application':'sum',\n",
+    "                                                                'Loan Offer':'sum',\n",
+    "                                                 'Loan Accepted':'sum',\n",
+    "                                                                  'Loan Amount':'sum'})\n",
+    "summary['loan_average'] = summary['Loan Amount']/summary['Loan Offer']\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +734,7 @@
        "Default Creative                     75.0  3455.0  0.021708          3380.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -547,16 +792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1228be0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x120cc3f98>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +905,7 @@
        "Default Creative           42.0  1.785714  1.024950  1.0  1.0  1.0  2.0  5.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +932,7 @@
        "LeveneResult(statistic=0.31203674705084017, pvalue=0.5784778858712274)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +974,7 @@
        " (1.8780625622801328, 0.7884615384615387, 0.946974238567715))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -808,6 +1053,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "### Wilcoxon test (non parametric equiv for t-test)\n",
     "The distribution of average sign ups per day is not normally distributed so use non-parametric testing - Wilcoxon test instead of T test.\n",
     "\n",
     "H0: There is no difference between the median daily sign up for the creatives used.\n",
@@ -817,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +1073,7 @@
        "WilcoxonResult(statistic=275.5, pvalue=0.0010486871479679805)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +1100,7 @@
        "WilcoxonResult(statistic=275.5, pvalue=0.0010486871479679805)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,12 +1113,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### T-test"
+    "#### Unpaired t-test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +1227,7 @@
        "1                                   6                 7"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,13 +1246,6 @@
     "ca_2_summary = ca_2.groupby(['Creative', 'already_applied']).agg({'Company ID':'count'}).reset_index()\n",
     "ca_2_summary.pivot(index='already_applied', columns='Creative', values='Company ID')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
